@@ -1,3 +1,11 @@
+2005-01-07  Jorn Baayen  <jbaayen@gnome.org>
+
+	* src/FileSelector.cs:
+	* src/PlaylistWindow.cs:
+	* src/Song.cs:
+
+	Allow selecting multiple folders on import.
+
 2005-01-07  Tamara Roberson  <foxxygirltamara@gmail.com>
 
 	* libmuine/pointer-list-view.c:
